@@ -570,6 +570,8 @@ Your account has been created. Don't forget to change your {{SITENAME}} preferen
 'yourpasswordagain' => 'Retype password',
 'newusersonly'	=> ' (new users only)',
 'remembermypassword' => 'Remember my password across sessions.',
+'yourdomainname'       => 'Your domain',
+'externaldberror'      => 'There was either an external authentication database error or you are not allowed to update your external account.',
 'loginproblem'	=> '<b>There has been a problem with your login.</b><br />Try again!',
 'alreadyloggedin' => "<font color=red><b>User $1, you are already logged in!</b></font><br />\n",
 
